aml-syntax/src/snapshots/aml_syntax__parser__tests__parsing_attributes.snap
---
source: aml-syntax/src/parser.rs
expression: get_ast(template)
---
nodes:
  - Text:
      value:
        String:
          value:
            start_byte: 26
            end_byte: 33
          text: "\"Hello\""
      attributes:
        - Attribute:
            name:
              Identifier:
                value:
                  start_byte: 7
                  end_byte: 17
                text: foreground
            value:
              String:
                location:
                  start_byte: 19
                  end_byte: 24
                value: "\"red\""
      children:
        - Span:
            value:
              String:
                value:
                  start_byte: 66
                  end_byte: 73
                text: "\"World\""
            attributes:
              - Attribute:
                  name:
                    Identifier:
                      value:
                        start_byte: 44
                        end_byte: 54
                      text: background
                  value:
                    String:
                      location:
                        start_byte: 56
                        end_byte: 64
                      value: "\"yellow\""
            location:
              start_byte: 38
              end_byte: 42
            text: span
      location:
        start_byte: 1
        end_byte: 5
      text: text
variables: {}
scopes:
  - variables: []
    parent: ~
  - variables: []
    parent: 0
