aml-syntax/src/snapshots/aml_syntax__parser__tests__parsing_weirdly_formatted_attributes.snap
---
source: aml-syntax/src/parser.rs
expression: get_ast(template)
---
nodes:
  - Text:
      value:
        String:
          value:
            start_byte: 79
            end_byte: 86
          text: "\"Hello\""
      attributes:
        - Attribute:
            name:
              Identifier:
                value:
                  start_byte: 12
                  end_byte: 22
                text: foreground
            value:
              String:
                location:
                  start_byte: 33
                  end_byte: 38
                value: "\"red\""
        - Attribute:
            name:
              Identifier:
                value:
                  start_byte: 44
                  end_byte: 54
                text: background
            value:
              String:
                location:
                  start_byte: 68
                  end_byte: 75
                value: "'green'"
      children:
        - Span:
            value:
              String:
                value:
                  start_byte: 119
                  end_byte: 126
                text: "\"World\""
            attributes:
              - Attribute:
                  name:
                    Identifier:
                      value:
                        start_byte: 97
                        end_byte: 107
                      text: background
                  value:
                    String:
                      location:
                        start_byte: 109
                        end_byte: 117
                      value: "\"yellow\""
            location:
              start_byte: 91
              end_byte: 95
            text: span
      location:
        start_byte: 1
        end_byte: 5
      text: text
variables: {}
scopes:
  - variables: []
    parent: ~
  - variables: []
    parent: 0
