aml-syntax/src/snapshots/aml_syntax__parser__tests__text_element_with_multiple_attributes.snap
---
source: aml-syntax/src/parser.rs
expression: ast
---
nodes:
  - Text:
      values:
        - String:
            value: "\"Hello\""
            location:
              start_byte: 48
              end_byte: 55
      attributes:
        - Attribute:
            name:
              Identifier:
                value: foreground
                location:
                  start_byte: 6
                  end_byte: 16
            value:
              Primitive:
                original: "#ff0000"
                value:
                  Hex:
                    r: 255
                    g: 0
                    b: 0
                location:
                  start_byte: 18
                  end_byte: 25
            location:
              start_byte: 6
              end_byte: 25
            original: "foreground: #ff0000"
        - Attribute:
            name:
              Identifier:
                value: background
                location:
                  start_byte: 27
                  end_byte: 37
            value:
              Primitive:
                original: "#00ff00"
                value:
                  Hex:
                    r: 0
                    g: 255
                    b: 0
                location:
                  start_byte: 39
                  end_byte: 46
            location:
              start_byte: 27
              end_byte: 46
            original: "background: #00ff00"
      children: []
      text: "text [foreground: #ff0000, background: #00ff00] \"Hello\""
      location:
        start_byte: 0
        end_byte: 55
variables: {}
scopes:
  - variables: []
    parent: ~
