aml-syntax/src/snapshots/aml_syntax__parser__tests__vstack_with_no_children.snap
---
source: aml-syntax/src/parser.rs
expression: ast
---
nodes:
  - VStack:
      children: []
      location:
        start_byte: 0
        end_byte: 6
      attributes: []
      original: vstack
variables: {}
scopes:
  - variables: []
    parent: ~
